@@ -2,7 +2,7 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages. There is also a sg3_utils man page.
 
-Changelog for pre-release sg3_utils-1.48 [20220420] [svn: r945]
+Changelog for pre-release sg3_utils-1.48 [20220420] [svn: r946]
   - sg_z_act_query: new utility for sending either a
     Zone activate or Zone query command
   - sg_rep_density: new utility for decoding the response of
@@ -16,6 +16,8 @@ Changelog for pre-release sg3_utils-1.48 [20220420] [svn: r945]
       each LUN in the default (no option) output
     - rev 815 changed the order of listing hosts from
       numeric to alphabetical, change it back to numeric
+    - https://github.com/doug-gilbert/sg3_utils/pull/17
+      applied with tweaks: add timeout parameter
   - sg_rep_zones: add Report zone starting LBA granularity
     field in REPORT ZONES response [zbc2r12]
     - add --brief option, show part of header and last
